# SwingTradeV2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: model_policy.yaml  universe.yaml  watchlist.yaml
docs/prompts/: 00_cursor_safety.md  01_pipeline_runbooks.md  02_phase_m_universe.md  03_phase_n_batching_cio.md  04_phase_l_cost_model_guardrails.md  05_debugging_and_recovery.md  06_dev_handoff.md  07_future_learning_sqlite.md
prompts/: _shared_output_contract.md  cio_body.md  cio_schema.md  market_sentiment_body.md  market_sentiment_schema.md  sentiment_body.md  sentiment_schema.md  technical_body.md  technical_schema.md
swingtrade/: __init__.py  __main__.py  analysis_batching.py  anthropic_usage.py  candidate_logger.py  candidate_ranker.py  candidate_review.py  cio_packet.py  cli.py  discord_bot.py  json_utils.py  logging_config.py  model_guard.py  pipeline.py  prompt_loader.py  settings.py  universe_loader.py  watchlist_store.py
swingtrade/agents/: cio.py  hard_veto.py  market_sentiment.py  sentiment.py  technical.py
swingtrade/integrations/: anthropic_client.py  calendar_utils.py  finnhub_client.py  http.py  newsapi_client.py  reddit_client.py  ta_features.py  yfinance_data.py
swingtrade/models/: __init__.py  agents.py
tests/: diagnose_cio_packet.py  run_batching_tests.py  test_analysis_batching.py  test_anthropic_usage.py  test_cio_normalization.py  test_model_guard.py
tests/fixtures/: candidate_review_m3.jsonl
