[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "swingtrade"
version = "0.1.0"
description = "Phase 1 MVP: multi-agent swing trading pipeline and Discord watchlist bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40.0",
  "discord.py>=2.4.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.6.0",
  "pyyaml>=6.0.1",
  "yfinance>=0.2.50",
  "pandas>=2.0.0",
  "praw>=7.7.0",
]

[project.scripts]
swingtrade = "swingtrade.cli:main"

[tool.setuptools.packages.find]
where = ["."]
